--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
   flutter_masked_text2: ^0.9.1
+  intl: ^0.17.0
 
 dev_dependencies:
   flutter_test:
